css/mobile.css
body {
  background-image: url(../img/backgroundBlank.png);
  width: 100vw;
  background-repeat: no-repeat;
  background-position: left top;
  background-size: 100%;
  font-family: "Lato", sans-serif;
  margin: 0px;
  padding: 0px;
}

.logo {
  width: 25vw;
}

#header {
  margin-left: 2vw;
  margin-right: 2vw;
  display: grid;
  grid-template-columns: 6fr 6fr;
}

#headerFollow {
  width: 100vw;
  display: grid;
  grid-template-columns: 6fr 6fr;
  display: none;
  position: fixed;
  top: 0px;
  background-color: #1d1a21;
}

#headerText {
  color: #bababa;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  text-align: center;
  margin-top: auto;
  margin-bottom: auto;
  margin-right: 5vw;
  font-size: 2vw;
}

#headerTextFollow {
  color: #bababa;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  text-align: center;
  margin-top: auto;
  margin-bottom: auto;
  margin-right: 5vw;
  font-size: 2vw;
}

.followTextDivs {
  margin-top: auto;
  margin-bottom: auto;
}

#topTextGrid {
  display: grid;
  grid-template-rows: 1fr 1fr 1fr 0.2fr 1fr 1fr 2fr;
}

#provenText {
  font-size: 4vw;
  color: white;
  text-align: center;
  margin-top: -3.75vw;
}

#developerText {
  font-size: 3vw;
  color: #1759a0;
  text-align: center;
}

.swirlDiv {
  text-align: center;
}

.swirl {
  width: 5vw;
}

#services {
  font-size: 5vw;
  text-align: center;
  color: #1759a0;
}

.servicesDescription {
  font-size: 2vw;
  margin-left: 15vw;
  margin-right: 15vw;
  text-align: center;
}

#iconGrid {
  display: grid;
  grid-template-columns: 2fr 1fr 2fr;
  text-align: center;
  margin-left: 15vw;
  margin-right: 15vw;
}

.iconPics {
  width: 10vw;
}

.iconBox {
  padding-top: 5vw;
  border: 1px solid #e8e8e8;
  font-size: 2vw;
  height: 25vw;
  margin-bottom: 5vw;
}

#blueGrid {
  background-color: #1759a0;
  height: 80vw;
  width: 100%;
  padding-top: 5vw;
  padding-bottom: 5vw;
  display: grid;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 3fr 1fr;
}

#clientsTitle {
  font-size: 5vw;
  color: white;
  text-align: center;
}

#clientsDescription {
  font-size: 2vw;
  color: white;
  text-align: center;
  margin-top: -1vw;
  padding-left: 15vw;
  padding-right: 15vw;
}

#iconsGrid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  margin-left: 10vw;
  margin-right: 10vw;
}

.clientIconDiv {
  text-align: center;
  margin-top: auto;
  margin-bottom: auto;
}

.clientIcon {
  width: 5vw;
}

#clientDescriptionText {
  text-align: center;
  font-size: 1.5vw;
  color: white;
  margin-left: 12vw;
  margin-right: 12vw;
}

#testamonialDiv {
  text-align: center;
  font-size: 1.75vw;
  font-style: italic;
  color: white;
  margin-top: 8vw;
  margin-left: 15vw;
  margin-right: 15vw;
}

#testamonialInfo {
  text-align: center;
  font-size: 1.5vw;
  color: white;
}

#testamonialName {
  font-weight: bolder;
}

#testamonialTitle {
  margin-top: -1vw;
  font-size: 1.25vw;
}

#testamonialCompany {
  margin-top: -1vw;
  font-size: 1.25vw;
}

#aboutGrid {
  width: 100%;
  padding-top: 5vw;
  padding-bottom: 5vw;
}

#about {
  color: #1759a0;
  font-size: 5vw;
  text-align: center;
}

#aboutText {
  text-align: left;
  font-size: 2vw;
  color: black;
  margin-left: 15vw;
  margin-right: 15vw;
}

#aboutBoxRowGrid {
  display: grid;
  grid-template-rows: 1fr 1fr 1fr;
  grid-row-gap: 1fr;
  margin-left: 15vw;
  margin-right: 15vw;
  text-align: center;
  font-size: 2vw;
}

.aboutBox {
  border: 1px solid #e8e8e8;
  margin: 1vw;
}

.aboutBoxColumnGrid {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

#contactsGrid {
  background-color: #333333;
  width: 100%;
  padding-top: 5vw;
  padding-bottom: 10vw;
}

#contact {
  color: white;
  font-size: 5vw;
  text-align: center;
}

#contactText {
  color: white;
  text-align: center;
  font-size: 2vw;
  margin-left: 28vw;
  margin-right: 28vw;
}

#contactInfoDiv {
  background-color: #4f4f4f;
  padding-top: 1vw;
  padding-bottom: 1vw;
  margin-left: 15vw;
  margin-right: 15vw;
}

#contactSpace {
  height: 1vw;
}

.contactInfo {
  color: white;
  text-align: center;
  font-size: 2vw;
  margin-left: 15vw;
  margin-right: 15vw;
}

#contactNumber {
  margin-top: -0.5vw;
  font-weight: bolder;
  font-size: 3vw;
}

.servicesLink:hover,
.clientsLink:hover,
.aboutLink:hover,
.contactLink:hover {
  text-decoration: underline;
  cursor: pointer;
}

